--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@my-finance/ui",
+  "name": "@web-apps/ui",
   "version": "0.0.1",
   "repository": "https://github.com/sebastiangon11/my-finance.git",
   "license": "MIT",
