--- a/apps/my-finance/package.json
+++ b/apps/my-finance/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "web-app",
+  "name": "my-finance",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@my-finance/ui": "workspace:*",
+    "@web-apps/ui": "workspace:*",
     "@vercel/analytics": "^1.0.2",
     "next": "13.4.19",
     "react": "18.2.0",
