--- a/apps/my-finance/package.json
+++ b/apps/my-finance/package.json
@@ -9,16 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@web-apps/ui": "workspace:*",
     "@vercel/analytics": "^1.0.2",
+    "@web-apps/ui": "workspace:*",
     "next": "13.4.19",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "20.5.1",
     "@types/react": "latest",
     "@types/react-dom": "18.2.7",
+    "@types/uuid": "^9.0.8",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
