feat: setup accounts page

--- a/apps/my-finance/tsconfig.json
+++ b/apps/my-finance/tsconfig.json
@@ -22,6 +22,7 @@
     "paths": {
       "@/*": ["./src/*"],
       "@lib/*": ["lib/*"],
+      "@/hooks/*": ["./src/app/hooks/*"],
       "@/components/*": ["./src/app/components/*"],
       "@/domain": ["./src/app/domain/index"],
       "@/services": ["./src/app/services/index"],
