--- a/apps/my-finance/package.json
+++ b/apps/my-finance/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@vercel/analytics": "^1.0.2",
     "@web-apps/ui": "workspace:*",
-    "next": "13.4.19",
+    "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "uuid": "^9.0.1",
@@ -19,12 +19,12 @@
   },
   "devDependencies": {
     "@types/node": "20.5.1",
-    "@types/react": "latest",
-    "@types/react-dom": "18.2.7",
+    "@types/react": "^18.2.58",
+    "@types/react-dom": "18.2.19",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
-    "eslint-config-next": "13.4.19",
+    "eslint-config-next": "14.1.0",
     "postcss": "8.4.28",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
