--- a/apps/my-finance/package.json
+++ b/apps/my-finance/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
     "@vercel/analytics": "^1.0.2",
     "@web-apps/ui": "workspace:*",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.50.1",
     "swr": "^2.2.5",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
