--- a/apps/my-finance/package.json
+++ b/apps/my-finance/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@vercel/analytics": "^1.0.2",
     "@web-apps/ui": "workspace:*",
+    "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
