--- a/apps/my-finance/package.json
+++ b/apps/my-finance/package.json
@@ -18,6 +18,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-toastify": "^10.0.4",
+    "react-transition-group": "^4.4.5",
     "swr": "^2.2.5",
     "uuid": "^9.0.1",
     "zod": "^3.22.4"
@@ -26,6 +27,7 @@
     "@types/node": "20.5.1",
     "@types/react": "^18.2.58",
     "@types/react-dom": "18.2.19",
+    "@types/react-transition-group": "^4.4.10",
     "@types/uuid": "^9.0.8",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
