ci: setup testing

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev:local-storage": "NEXT_PUBLIC_STORAGE=local-storage turbo run dev",
     "start": "turbo run start",
     "lint": "turbo run lint",
-    "clean": "turbo run clean"
+    "clean": "turbo run clean",
+    "test": "turbo run test"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
