--- a/apps/my-finance/package.json
+++ b/apps/my-finance/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -24,16 +25,20 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@testing-library/react": "^14.2.2",
     "@types/node": "20.5.1",
     "@types/react": "^18.2.58",
     "@types/react-dom": "18.2.19",
     "@types/react-transition-group": "^4.4.10",
     "@types/uuid": "^9.0.8",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "10.4.15",
     "eslint": "8.47.0",
     "eslint-config-next": "14.1.0",
+    "jsdom": "^24.0.0",
     "postcss": "8.4.28",
     "tailwindcss": "3.3.3",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "vitest": "^1.4.0"
   }
 }
