--- a/apps/my-finance/package.json
+++ b/apps/my-finance/package.json
@@ -13,9 +13,11 @@
     "@hookform/resolvers": "^3.3.4",
     "@vercel/analytics": "^1.0.2",
     "@web-apps/ui": "workspace:*",
+    "chart.js": "^4.4.2",
     "firebase": "^10.8.0",
     "next": "14.1.0",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.50.1",
     "react-toastify": "^10.0.4",
