--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.2.0",
-    "clsx": "^2.0.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-config-turbo": "latest",
     "prettier": "^3.0.3",
     "turbo": "^1.8.3"
+  },
+  "dependencies": {
+    "tailwind-merge": "^2.3.0"
   }
 }
