--- a/apps/fingarden/tsconfig.json
+++ b/apps/fingarden/tsconfig.json
@@ -20,12 +20,13 @@
       }
     ],
     "paths": {
-      "@/hooks/*": ["./src/app/hooks/*"],
       "@/components/*": ["./src/app/components/*"],
       "@/domain": ["./src/app/domain/index"],
-      "@/services": ["./src/app/services/index"],
-      "@/utils": ["./src/app/utils/index"],
+      "@/hooks/*": ["./src/app/hooks/*"],
+      "@/pages/*": ["./src/app/pages/*"],
       "@/routes": ["./src/app/routes"],
+      "@/services": ["./src/app/services/index"],
+      "@/utils": ["./src/app/utils/index"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
