--- a/apps/fingarden/package.json
+++ b/apps/fingarden/package.json
@@ -15,6 +15,7 @@
     "@web-apps/ui": "workspace:*",
     "chart.js": "^4.4.2",
     "firebase": "^10.8.0",
+    "lodash": "^4.17.21",
     "next": "14.1.0",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -29,6 +30,7 @@
   "devDependencies": {
     "@testing-library/react": "^14.2.2",
     "@types/dom-view-transitions": "^1.0.4",
+    "@types/lodash": "^4.17.4",
     "@types/node": "20.5.1",
     "@types/react": "^18.2.58",
     "@types/react-dom": "18.2.19",
